Despre Runcu Commit

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <link rel="stylesheet" href="assets/theme/css/style.css" />
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;1,400;1,700&display=swap&display=swap"
+      href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
     <noscript
       ><link
         rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;1,400;1,700&display=swap&display=swap"
+        href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"
     /></noscript>
     <link
       rel="preload"
@@ -63,21 +63,54 @@
         <div class="container">
           <div class="navbar-brand">
             <span class="navbar-logo">
-              <a href="https://mobiri.se">
+              <a href="https://apmtc-runcu.ro/">
                 <img
                   src="assets/images/logo.png"
                   alt="Mobirise Website Builder"
-                  style="height: 3rem"
+                  style="height: 4rem"
                 />
               </a>
             </span>
             <span class="navbar-caption-wrap"
               ><a
                 class="navbar-caption text-black display-5"
-                href="https://mobiri.se"
+                href="https://apmtc-runcu.ro/"
                 >APMTC Runcu</a
               ></span
             >
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-bs-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <div class="hamburger">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul
+              class="navbar-nav nav-dropdown nav-right"
+              data-app-modern-menu="true"
+            >
+              <li class="nav-item">
+                <a
+                  class="nav-link link text-black display-4"
+                  href="https://apmtc-runcu.ro/despre-runcu.html"
+                >
+                  Despre Runcu</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
