--- a/despre-runcu.html
+++ b/despre-runcu.html
@@ -200,7 +200,7 @@
                     target="_blank"
                     >Link</a
                   ><br /><br />Puncte de interes: Cascada Blide, Varful Leaota,
-                  Cabana Leaota, Adormirea Maicii Domnului.
+                  Cabana Leaota, Manastirea Adormirea Maicii Domnului.
                 </p>
               </div>
             </div>
