--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               <li class="foot-menu-item mbr-fonts-style display-7">
                 <a
                   class="text-white"
-                  href="https://webmail.apmtc-runcu.ro"
+                  href="https://outlook.office.com/mail/"
                   target="_blank"
                   >Webmail</a
                 >
